2006-05-17 Patrick Galbraith <patg@mysql.com) (3.0004)
  * Fix dbd_st_finish which closed the handle prematurely (Martin Evans)
  * Compile issues (Martin Evans)
  * Fix to dbd_bind_ph to deal with numbers (ints, floats) correctly
    (Alexey Stroganov)
  * Test changes - bind_param 41 and 42

2006-04-29 Patrick Galbraith <patg@mysql.com> (3.0003)
  * Fixed bug where if mysql_server_prepare is set and a prepare
    fails, only a warning is issued and no error text is
    available (Thanks Martin Evans!)
  * Added support for ParamValues and associated test (Martin Evans)
  * Removed declaration of int num_fields outside a block which
    was causing compilation error with some C compilers.
  * Fix to typo in Makefile.PL (Martin Evans)
  * Added mysql_stmt_reset for when mysql_stmt_execute fails
  * Added test for mysql_stmt_execute bug (Martin Evans)
  * Fixed syntax for create table ENGINE=InnoDB instead of type=innobase
  * Removed tests for old driver emulation

2005-07-07 Patrick Galbraith <patg@mysql.com> (3.0002)
  * Fix to ensure MYSQL_BIND is only defined when mysql
    client version is >= 4.1.3. Thanks to Tom Parkison, 
    Anup Singh, Sergey Skvortsov, and other users who informed
    me about this issue.

2005-07-06 Patrick Galbraith <patg@mysql.com> (3.0001)
  * Special Thanks to Steve Hay for his patch to fix windows 
    compiles!
  * Changed uint argument in safe_sv_fetch to int due to 
    uint not being available on windows unless you include
    my_globals.h in dbdimp.h, which also breaks on unixen!
  * Fixed Makefile.PM for windows compiles (thanks to Steve Hay!)
  * Removed long long type from dbdimp.h
  * Changed strncasecmp to strncmp (still need a better long-term solution)
    in dbdimp.c
  * Modified Makefile.PM to make prepared statements default
  * Removed // comments from mysql.xs, dbdimp.c (Thanks Bodo Bergmann!)
  * Fixed runtime bug (when inserting or updating quotes or double quotes)
    (Thanks to Brad Choate)
