@@ -437,7 +437,15 @@ static char *parse_params(
 
   for (i= 0, ph= params; i < num_params; i++, ph++)
   {
-    if (!ph->value  ||  !SvOK(ph->value))
+    int defined= 0;
+    if (ph->value)
+    {
+      if (SvMAGICAL(ph->value))
+        mg_get(ph->value);
+      if (SvOK(ph->value))
+        defined=1;
+    }
+    if (!defined)
       alen+= 3;  /* Erase '?', insert 'NULL' */
     else
     {
@@ -637,9 +645,12 @@ static char *parse_params(
 int bind_param(imp_sth_ph_t *ph, SV *value, IV sql_type)
 {
   if (ph->value)
+  {
+    if (SvMAGICAL(ph->value))
+      mg_get(ph->value);
     (void) SvREFCNT_dec(ph->value);
-
-  ph->value = newSVsv(value);
+  }
+  ph->value= newSVsv(value);
 
   if (sql_type)
     ph->type = sql_type;
@@ -3031,6 +3042,35 @@ int dbd_st_finish(SV* sth, imp_sth_t* imp_sth) {
         return 0;
       }
     }
+    /* clean up other statement allocations */
+    if (DBIc_NUM_PARAMS(imp_sth) > 0)
+    {
+      if (dbis->debug >= 2)
+        PerlIO_printf(DBILOGFP,
+                      "\tFreeing %d parameters\n",
+                      DBIc_NUM_PARAMS(imp_sth));
+      FreeBind(imp_sth->bind);
+      FreeFBind(imp_sth->fbind);
+      imp_sth->bind= NULL;
+      imp_sth->fbind= NULL;
+    }
+    num_fields= DBIc_NUM_FIELDS(imp_sth);
+
+    if (imp_sth->fbh)
+    {
+      num_fields= DBIc_NUM_FIELDS(imp_sth);
+
+      for (fbh= imp_sth->fbh, i= 0; i < num_fields; i++, fbh++)
+      {
+        if (fbh->data)
+          Safefree(fbh->data);
+      }
+      FreeFBuffer(imp_sth->fbh);
+      FreeBind(imp_sth->buffer);
+      imp_sth->buffer= NULL;
+      imp_sth->fbh= NULL;
+    }
+
   }
 #endif
 
